--- a/templates/base.html
+++ b/templates/base.html
@@ -17,13 +17,16 @@
         <meta name="viewport"    content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="home page that display all posts"/>
 
+       
         <!-- bootstrap 5.3 -->
+        <link href="{% static 'css\bootstrap\bootstrap.min.css' %}" rel="stylesheet" type="text/css">
         <!-- https://getbootstrap.com/docs/5.3/getting-started/introduction/#quick-start -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        
+        <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+               
         <!-- fontawesome 6.5.1 -->
+        <link href="{% static 'css\fontawesome\all.min.css' %}" rel="stylesheet" type="text/css">
         <!-- https://cdnjs.com/libraries/font-awesome-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" type="text/css">
+        <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" type="text/css"> -->
     
         <!-- font google -->
         <!-- //fonts.google.com/selection/embed -->
@@ -32,7 +35,7 @@
         <link  href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Protest+Strike&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
     
         <!-- custom style -->
-        <link href="{% static 'polls/css/polls_style.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'css/polls/polls_style.css' %}" rel="stylesheet" type="text/css">
     </head>
 
 
@@ -51,8 +54,8 @@
                   Account
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="">Register</a></li>
-                  <li><a class="dropdown-item" href="">Login</a></li>
+                  <li><a class="dropdown-item" href="{%  url 'users:select-role' %}">Register</a></li>
+                  <li><a class="dropdown-item" href="{%  url 'users:user-login' %}">Login</a></li>
                   <li><a class="dropdown-item" href="#">Profile</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Logout</a></li>
@@ -95,15 +98,16 @@
 
 
         </div>
-        <!-- https://getbootstrap.com/docs/5.3/getting-started/introduction/#quick-start -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>          
-       
-        <!-- https://cdnjs.com/libraries/font-awesome-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
-    
-    
 
-
+        <!-- bootstrap 5.3 -->
+        <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}"></script>
+        <!--  https://getbootstrap.com/docs/5.3/getting-started/introduction/#quick-start -->
+        <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script>   -->      
+        
+        <!-- fontawesome 6.5.1 -->
+        <script src="{% static 'js/fontawesome/all.min.js' %}"></script>
+        <!-- https://cdnjs.com/libraries/font-awesome   -->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>   -->
         
     </body>
 
