fix errors in js in fontawesome

--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -23,7 +23,7 @@
               
               <!-- search by name -->
               <div class="col-md-6">
-                    <form class="form-inline input-group flex-nowrap" action="#" method="post">
+                    <form class="form-inline input-group flex-nowrap" action="#" method="POST">
                         <input type="text" id="search" name="search" class='form-control' placeholder="Search By Word...">
                         <button type="submit" class="btn btn-sm btn-light bg-info">
                             <i class="fa-solid fa-magnifying-glass"></i>
