--- a/users/templates/users/user_login.html
+++ b/users/templates/users/user_login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %} 
 
 
 
@@ -23,7 +24,7 @@
             <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 bg-info bg-gradient">
                 <form method="POST" enctype='multipart/form-data' novalidate>
                     {% csrf_token %}
-                    {{ form }}
+                    {{ form|crispy }}
                     <div class='d-flex justify-content-between'>
                         <button type="submit" class="btn btn-success">Login</button>
                         <a type="link" href="{% url 'polls:home' %}" class="btn btn-secondary">Cancel</a>
