--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %} 
 
 
 
@@ -21,7 +22,7 @@
                 
                 <form method="POST" enctype='multipart/form-data' novalidate>
                     {% csrf_token %}
-                    {{ form }}
+                    {{ form|crispy }}
                     <div class='d-flex justify-content-between'>
                         <button type="submit" class="btn btn-success">Register</button>
                         <a type="link" href="{% url 'users:select-role' %}" class="btn btn-secondary">Cancel</a>
