--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,11 @@
         <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" type="text/css"> -->
     
         <!-- font google -->
-        <!-- //fonts.google.com/selection/embed -->
-        <link  href="https://fonts.googleapis.com" rel="preconnect">
-        <link  href="https://fonts.gstatic.com"    rel="preconnect" crossorigin>
-        <link  href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Protest+Strike&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
-    
+        <!-- https://fonts.google.com/selection/embed-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        
         <!-- custom style -->
         <link href="{% static 'css/polls/polls_style.css' %}" rel="stylesheet" type="text/css">
     </head>
