--- a/polls/templates/polls/poll_detail.html
+++ b/polls/templates/polls/poll_detail.html
@@ -14,19 +14,19 @@
 {% block content %}
 
     <section  class="polls">
-        <h1 class='poll-question'>{{ question.question_text }}</h1>
+        <h1 class='poll-question'>{{ poll.poll_question }}</h1>
     </section>
 
     <section class="polls">
-        <form action="{% url 'polls:question-vote-create' question_slug=question.slug  year=question.published_at.year  month=question.published_at.month  day=question.published_at.day %}" method="post">
+        <form action="{% url 'polls:poll-vote-create' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" method="POST">
             {% csrf_token %}
 
-            {% for choice in question.choice_set.all %}
+            {% for choice in poll.choice_set.all %}
                 <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" class="form-check-input">
                 <label for="choice{{ forloop.counter }}" class="form-check-label">
                     {{ choice.choice_text }}
                 </label> 
-                <br>
+                <br><br>
             {% endfor %}
             <div class="d-flex flex-row-reverse">
                 <input class='my-btn' type="submit" value="Vote">
@@ -34,4 +34,4 @@
         </form>
     </section>
 
-{% endblock  content %}
+{% endblock content %}
