--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                   <li><a class="dropdown-item" href="{%  url 'users:user-login' %}">Login</a></li>
                   <li><a class="dropdown-item" href="#">Profile</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'users:user-logout' %}">Logout</a></li>
                 </ul>
             </li>
             <li class="nav-item dropdown">
