--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -83,9 +83,9 @@
                     </div> 
                   
                       <div class="d-flex flex-row-reverse">
-                        <a  href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
+                        <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
                         <button type="button" class="btn btn-sm btn-info bg-info p-1">Edit</button>&nbsp 
-                        <button type="button" class="btn btn-sm btn-info bg-info p-1">Delete</button>&nbsp
+                        <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
                       </div>
               
                 </section>
