--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -64,7 +64,7 @@
 
 
 
-    <section class='polls bg-primary-subtle kanit-black'>   
+    <section class='polls bg-primary-subtle -black'>   
 
 
     <h1 class='txt-color'><strong>Polls</strong></h1>
@@ -75,18 +75,24 @@
           
             {% for poll in latest_poll_list %}
                 <section class='polls'>
-                    <div class="fw-bold fw-medium fs-3 text">
-                        <i class="fa-solid fa-play text-info"></i> &nbsp
+                    <div>
+                      <i class="fa-solid fa-circle-question" style="color: #74C0FC;"></i> &nbsp
                         <a class='text-decoration-none' href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}">
-                            {{ poll.poll_question }}
+                           <p class="fw-bold fw-medium fs-3 text"> {{ poll.poll_question }}</p>
                         </a>
                     </div> 
-                  
-                      <div class="d-flex flex-row-reverse">
+                    <div class="d-flex flex-row-reverse">
+                      {% if request.user.is_authenticated %}
                         <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
-                        <button type="button" class="btn btn-sm btn-info bg-info p-1">Edit</button>&nbsp 
+                        <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">Edit</a>&nbsp
                         <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
+                        <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                      {% else %}
+                        <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                      {% endif %}
                       </div>
+                    <br>
+                    <p class="fs-6">{{poll.created_at}}</p> 
               
                 </section>
             {% endfor %}      
