--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -25,8 +25,8 @@
               
               <!-- search by name -->
               <div class="col-md-6">
-                    <form class="form-inline input-group flex-nowrap" action="#" method="POST">
-                        <input type="text" id="search" name="search" class='form-control' placeholder="Search By Word...">
+                    <form class="form-inline input-group flex-nowrap" action={% url 'polls:home' %} method="GET">
+                        <input type="text" name="sc" value="" class='form-control' placeholder="Search By Word...">
                         <button type="submit" class="btn btn-sm btn-light bg-info">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
@@ -67,40 +67,39 @@
     <section class='polls bg-primary-subtle -black'>   
 
 
-    <h1 class='txt-color'><strong>Polls</strong></h1>
-
-    {% if latest_poll_list %}
-
-        <br> 
-          
-            {% for poll in latest_poll_list %}
-                <section class='polls'>
-                    <div>
-                      <i class="fa-solid fa-circle-question" style="color: #74C0FC;"></i> &nbsp
-                        <a class='text-decoration-none' href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}">
-                           <p class="fw-bold fw-medium fs-3 text"> {{ poll.poll_question }}</p>
-                        </a>
-                    </div> 
-                    <div class="d-flex flex-row-reverse">
-                      {% if request.user.is_authenticated %}
-                        <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
-                        <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">Edit</a>&nbsp
-                        <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
-                        <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
-                      {% else %}
-                        <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
-                      {% endif %}
-                      </div>
-                    <br>
-                    <p class="fs-6">{{poll.created_at}}</p> 
-              
-                </section>
-            {% endfor %}      
-          
-    {% else %}
-    <p>No polls are available.</p>
-    {% endif %}
+      <h1 class='txt-color'><strong>Polls</strong></h1>
 
     
+          <br> 
+            
+              {% for poll in latest_poll_list %}
+                  <section class='polls'>
+                      <div>
+                        <i class="fa-solid fa-circle-question" style="color: #74C0FC;"></i> &nbsp
+                          <a class='text-decoration-none' href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}">
+                            <p class="fw-bold fw-medium fs-3 text"> {{ poll.poll_question }}</p>
+                          </a>
+                      </div> 
+                      <div class="d-flex flex-row-reverse">
+                          {% if request.user.is_authenticated %}
+                            <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
+                            <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">Edit</a>&nbsp
+                            <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
+                            <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                          {% else %}
+                            <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                          {% endif %}
+                      </div>
+                      <br>
+                      <p class="fs-6">{{poll.created_at}}</p> 
+                
+                  </section>
+              {% empty %}
+                  <section class='polls'>      
+                      <p class="fw-bold fw-medium fs-3 text">No polls are available.</p>
+                  </section> 
+              {% endfor %}
+
+      
     </section>   
 {% endblock content %} 
