--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -73,30 +73,34 @@
           <br> 
             
               {% for poll in latest_poll_list %}
-                  <section class='polls'>
-                      <div>
-                        <i class="fa-solid fa-circle-question" style="color: #74C0FC;"></i> &nbsp
-                          <a class='text-decoration-none' href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}">
-                            <p class="fw-bold fw-medium fs-3 text"> {{ poll.poll_question }}</p>
-                          </a>
-                      </div> 
-                      <div class="d-flex flex-row-reverse">
-                          {% if request.user.is_authenticated %}
-                            <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
-                            <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">Edit</a>&nbsp
-                            <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
-                            <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
-                          {% else %}
-                            <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
-                          {% endif %}
-                      </div>
-                      <br>
-                      <p class="fs-6">{{poll.created_at}}</p> 
-                
-                  </section>
+                  {% if poll.choice_set.count != 0 %}
+                      <section class='polls'>
+                        <span class="badge bg-light text-dark"> <i class="fa-solid fa-layer-group"></i> &nbsp{{poll.category|title}}</span>
+                          <div>
+                              <a class='text-decoration-none' href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}">
+                                <p class="fw-bold fw-medium fs-3 text p-2"> {{ poll.poll_question }}</p>
+                              </a>
+                          </div> 
+                          <div class="d-flex flex-row-reverse">
+                              {% if request.user.is_authenticated %}
+                                <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
+                                <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">Edit</a>&nbsp
+                                <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
+                                <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                              {% else %}
+                                <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                              {% endif %}
+                          </div>
+                          <span class="badge bg-light text-dark"><i class="fa-regular fa-clock"></i> &nbsp{{poll.created_at}}</span>
+                          
+                    
+                      </section>
+                  {% else %}  
+                        {{  poll.delete  }}
+                  {% endif %}  
               {% empty %}
                   <section class='polls'>      
-                      <p class="fw-bold fw-medium fs-3 text">No polls are available.</p>
+                      <p class="fw-medium text">No polls are available.</p>
                   </section> 
               {% endfor %}
 
