--- a/polls/templates/polls/poll_choices_create.html
+++ b/polls/templates/polls/poll_choices_create.html
@@ -1,66 +1,115 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
-
-
-<!-- start inlclude  'message' -->
-{% block messages %}
-   {% include 'includes/messages.html' %}
-{% endblock messages %}
-<!-- END inlclude  'message' -->
-
-
-
-
-{% block content %}
-
-    <section  class="polls">
-        <div class= "d-flex justify-content-between">
-            <h1 class='poll-question'><strong><text class="fs-4">{{ poll.poll_question }}</strong></text></h1>
-            <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day  %}" class='my-btn' type="button">Edit the Question</a>
-        </div>
-        <br>
-        <br>
-        <br>
-        <div>
-            {% if poll.choice_set.all.count > 0  %}
-                <ul class="list-group">
-                {% for choice in poll.choice_set.all %}
-                    <div class=' polls d-flex justify-content-between'>
-                        <li class="list-group-item border-0" >{{ choice.choice_text|title }}</li><a href="{% url 'polls:poll-choices-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day choice_id=choice.id  %}" class='my-btn' type="button">Edit</a>
-                    </div>
-                  
-                {% endfor %}
-               
-                </ul>
-            {% endif %}
-        </div>
-    </section>
-
-    {% if poll.choice_set.all.count < 5 %}
-    <section class="polls"> 
-        <p>Add a choice to:
-            <br>  
-            <strong><text class="fs-4">{{ poll.poll_question|title }}</text></strong> : </p>
-            <br>
-            <br>
+<DOCTYPE html>
+    <html lang="en">
+    {% load static %}
     
-        <form method="POST" enctype='multipart/form-data' novalidate>
-            {% csrf_token %}
+    
+        <!--Start Head-->
+    <head>
+            <!-- title -->
+            {% if title %}
+                <title>{% block title %}CrowdVoice Polls| {{title}}{% endblock title %}</title>
+            {% else %}
+                <title>CrowdVoice polls</title>
+            {% endif %}
+        
+            <!-- meta -->
+            <meta charset="utf-8">
+            <meta name="viewport"    content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <meta name="description" content="home page that display all posts"/>
+    
+           
+            <!-- bootstrap 5.3 -->
+            <link href="{% static 'css\bootstrap\bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+            <!-- https://getbootstrap.com/docs/5.3/getting-started/introduction/#quick-start -->
+            <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+                   
+            <!-- fontawesome 6.5.1 -->
+            <link href="{% static 'css\fontawesome\all.min.css' %}" rel="stylesheet" type="text/css">
+            <!-- https://cdnjs.com/libraries/font-awesome-->
+            <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" type="text/css"> -->
+        
+            <!-- font google -->
+            <!-- https://fonts.google.com/selection/embed-->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            {% comment %} <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> {% endcomment %}
+            
+            <!-- custom style -->
+            <link href="{% static 'css/polls/polls_style.css' %}" rel="stylesheet" type="text/css">
+    </head>
+    <body class ="container">
+           
+                {% load crispy_forms_tags %}
 
-            {{  poll_form|crispy }}
-            <div class="d-flex justify-content-between">
-                <input class='my-btn' type="submit" value="Add a choice">                
-            </div>    
-        </form>
 
-    </section>        
-    {% else %}       
-    <div>
-       
-        <a href="{% url 'polls:home' %}" class='my-btn' type="button" >Finish and go to main page</a>
-    </div>
-    {% endif %}
+                <!-- start inlclude  'message' -->
+                {% block messages %}
+                {% include 'includes/messages.html' %}
+                {% endblock messages %}
+                <!-- END inlclude  'message' -->
 
 
 
-{% endblock content %}
+
+                {% block content %}
+
+                    <section  class="polls">
+                        <div class= "d-flex justify-content-between mb-4">
+                            <h1 class='poll-question'><strong><text class="fs-4 ">{{ poll.poll_question }}</strong></text></h1>
+                            <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day  %}" class='my-btn' type="button">Edit the Question</a>
+                        </div>
+                        <div>
+                            {% if poll.choice_set.all.count > 0  %}
+                                <ul class="list-group">
+                                {% for choice in poll.choice_set.all %}
+                                    <div class=' polls d-flex justify-content-between'>
+                                        <li class="list-group-item border-0" >{{ choice.choice_text|title }}</li><a href="{% url 'polls:poll-choices-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day choice_id=choice.id  %}" class='my-btn' type="button">Edit</a>
+                                    </div>
+                                
+                                {% endfor %}
+                            
+                                </ul>
+                            {% endif %}
+                        </div>
+                    </section>
+
+                    {% if poll.choice_set.all.count < 5 %}
+                            <section class="polls"> 
+                                <p>Add a choice to:
+                                    <br>  
+                                    <strong><text class="fs-4">{{ poll.poll_question|title }}</text></strong> : </p>
+                                    <br>
+                                    <br>
+                            
+                                <form method="POST" enctype='multipart/form-data' novalidate>
+                                    {% csrf_token %}
+
+                                    {{  poll_form|crispy }}
+                                    <div class="d-flex justify-content-between">
+                                        <input class='my-btn' type="submit" value="Add a choice">                
+                                    </div>    
+                                </form>
+                            </section>        
+                    {% else %}     
+                            <div> 
+                                <a href="{% url 'polls:home' %}" class='my-btn' type="button" >Finish and go to main page</a>
+                            </div>
+                    {% endif %}
+
+
+
+                {% endblock content %}
+
+        <!-- bootstrap 5.3 -->
+        <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}"></script>
+        <!--  https://getbootstrap.com/docs/5.3/getting-started/introduction/#quick-start -->
+        <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script>   -->      
+        
+        <!-- fontawesome 6.5.1 -->
+        <script src="{% static 'js/fontawesome/all.min.js' %}"></script>
+        <!-- https://cdnjs.com/libraries/font-awesome   -->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>   -->
+        
+    </body>
+</html>
+  
