--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -14,63 +14,80 @@
 {% block content %}
 
 {{ request.user.role }}
+
+
+    <!-- add new poll row -->
     <section class="row mb-1">
       {% if request.user.is_superuser or request.user.role == 'OWNER'   %}
               <div class="col-md-6">
                 <div class="btn-group" role="group" aria-label="Basic example">
-                  <a  href="{% url 'polls:poll-create' %}" type="button" class="btn btn-sm btn-info bg-info">+Poll</a>
+                  <a  href="{% url 'polls:poll-create' %}" type="button" class="btn btn-sm btn-outline-dark">+ Poll</a>
                 </div>
               </div>
       {% endif %}
               
-              <!-- search by name -->
-              <div class="col-md-6">
-                    <form class="form-inline input-group flex-nowrap" action={% url 'polls:home' %} method="GET">
-                        <input type="text" name="sc" value="" class='form-control' placeholder="Search By Word...">
-                        <button type="submit" class="btn btn-sm btn-light bg-info">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
-                    </form>       
-              </div>      
+                 
     </section>
-
-   
-
-
-    <!-- filter and sort section-->
-    <section class="row mb-1">
-      <div class="input-group mb-3">
-        
-        <label class="input-group-text" for="inputGroupSelect01">Filter</label>
-        <select class="form-select" id="inputGroupSelect01">
-          <option selected>By Category...</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-
-        &nbsp &nbsp 
-
-        <label class="input-group-text" for="inputGroupSelect01">Sort</label>
-        <select class="form-select" id="inputGroupSelect01">
-          <option selected>By...</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-
-      </div>
-    </section>
-
-
-
-    <section class='polls bg-primary-subtle -black'>   
-
-
-      <h1 class='txt-color'><strong>Polls</strong></h1>
 
     
-          <br> 
+    <!-- polls list  -->
+    <section class='polls bg-primary-subtle -black row mb-1 '>   
+
+      <h1 class='txt-color'><strong>Polls</strong></h1>
+        <br><br><br>
+
+    <!-- all filter  and search row -->
+    <section class='polls bg-dark-subtle -black row'>
+      <div class="row input-group">
+        <div class="d-flex justify-content-around">
+          
+            <!-- filter by category -->
+            <div class="dropdown">
+              <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+              Filter By ..
+              </button>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                <li><a class="dropdown-item active" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+            </div>
+        
+            &nbsp &nbsp
+
+            <!-- sort by -->
+            <div class="dropdown">
+              <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+              Sort By ..
+              </button>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                <li><a class="dropdown-item active" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+            </div>
+      
+            &nbsp &nbsp
+
+            <!-- search by name -->
+            <div class="col-md-6">
+              <form class="form-inline input-group flex-nowrap" action={% url 'polls:home' %} method="GET">
+                  <input type="text" name="sc" value="" class='form-control' placeholder="Search By Word...">
+                  <button type="submit" class="btn btn-sm btn-light bg-info">
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                  </button>
+              </form>       
+            </div>   
+        
+        </div>
+      </div>
+    </section>  
+
+
             
               {% for poll in latest_poll_list %}
                   {% if poll.choice_set.count != 0 %}
@@ -105,5 +122,8 @@
               {% endfor %}
 
       
-    </section>   
+    </section> 
+    
+  
+
 {% endblock content %} 
