--- a/static/css/polls/polls_style.css
+++ b/static/css/polls/polls_style.css
@@ -36,7 +36,7 @@ body {
 
 /* Polls section */
 .polls {
-    background-color: #fff;
+    background-color: #fcfcfc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
