--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -102,16 +102,19 @@
                           </div> 
                           <div class="d-flex flex-row-reverse">
                               {% if request.user.is_authenticated %}
-                                <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
                                 <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">Edit</a>&nbsp
                                 <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
                                 <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
                               {% else %}
+                                <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
                                 <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
-                              {% endif %}
+                              
+                                {% endif %}
                           </div>
-                          <span class="badge bg-light text-dark"><i class="fa-regular fa-clock"></i> &nbsp{{poll.created_at}}</span>
-                          
+                          <span class="badge bg-light text-dark"><i class="fa-regular fa-clock"></i> &nbsp{{poll.created_at}}</span>|
+                          <span class="badge bg-light text-dark"><i class="fa-solid fa-users"></i> &nbsp{{poll.poll_voters_count}}</span>
+
+                         
                     
                       </section>
                   {% else %}  
