--- a/users/templates/users/select_role.html
+++ b/users/templates/users/select_role.html
@@ -16,7 +16,7 @@
         <h1 class='poll-question'>Please Select What you want to Register as ?</h1>
     </section>
 
-    <section class="polls">
+    <section class="container polls bg-primary-subtle">
 
         <form method="GET" novalidate>
             {{ form|crispy }}
