--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -18,15 +18,13 @@
 
     <!-- add new poll row -->
     <section class="row mb-1">
-      {% if request.user.is_superuser or request.user.role == 'OWNER'   %}
+      {% if request.user.is_superuser or request.user.role == 'OWNER' %}
               <div class="col-md-6">
                 <div class="btn-group" role="group" aria-label="Basic example">
-                  <a  href="{% url 'polls:poll-create' %}" type="button" class="btn btn-sm btn-outline-info">+ Poll</a>
+                  <a  href="{% url 'polls:poll-create' %}" type="button" class="my-btn text-light">+ Poll</a>
                 </div>
               </div>
-      {% endif %}
-              
-                 
+      {% endif %}          
     </section>
 
     
@@ -43,7 +41,7 @@
           
             <!-- filter by category -->
             <div class="dropdown">
-              <button class="btn btn-light bg-info dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
               Filter By Category ..
               </button>
               <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
@@ -63,7 +61,7 @@
 
             <!-- sort by -->
             <div class="dropdown">
-              <button class="btn btn-light bg-info dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
               Sort By ..
               </button>
               <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
@@ -79,7 +77,7 @@
             <div class="col-md-6">
               <form class="form-inline input-group flex-nowrap" action={% url 'polls:home' %} method="GET">
                   <input type="text" name="sc" {%if sc  %} value="{{sc}}"{% endif %} class='form-control bg-light' placeholder="Search By Word...">
-                  <button type="submit" class="btn btn-sm btn-light bg-info">
+                  <button type="submit" class="btn btn-sm btn-light bg-secondary text-light">
                       <i class="fa-solid fa-magnifying-glass"></i>
                   </button>
               </form>       
@@ -102,12 +100,13 @@
                           </div> 
                           <div class="d-flex flex-row-reverse">
                               {% if request.user.is_authenticated %}
-                                <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">Edit</a>&nbsp
-                                <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Delete</a>&nbsp
-                                <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                                <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
+                                <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-warning p-1">Result</a>&nbsp
+                                <a href="{% url 'polls:poll-update' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-success p-1">Edit</a>&nbsp
+                                <a href="{% url 'polls:poll-delete-confirm' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-secondary p-1">Delete</a>&nbsp
                               {% else %}
                                 <a href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}"  type="button" class="btn btn-sm btn-danger bg-danger p-1">+Vote</a>&nbsp
-                                <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-info bg-info p-1">Result</a>&nbsp
+                                <a href="{% url 'polls:poll-votes-result' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" type="button" class="btn btn-sm btn-warning p-1">Result</a>&nbsp
                               
                                 {% endif %}
                           </div>
