--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -33,7 +33,7 @@
       <nav class="navbar">
         <div class="container-fluid">
             {% comment %} <img src="{% static 'img/LOGO.png' %}" alt="" width="50" height="50" class="d-inline-block align-text-top"> {% endcomment %}
-           <h1> <strong class='txt-color'>Polls</strong></h1>
+           <h1><strong class='txt-color'>CrowdVoice</strong> polls</h1>
         </div>
       </nav>   
       
