--- a/polls/templates/polls/poll_votes_result.html
+++ b/polls/templates/polls/poll_votes_result.html
@@ -46,12 +46,17 @@
               </tr>
               <tr>
                 <th scope="row"><i class="fa-solid fa-users"></i>&nbsp&nbspPoll's Number of voters:</th>
-                <td colspan="2">{{poll.poll_voters_count }}</td>
+                <td>{{ poll.poll_voters_count }}</td>
               </tr>
             </tbody>
         </table>
         
     </section>
+
+
+
+
+
 
        
 
