--- a/static/css/polls/polls_style.css
+++ b/static/css/polls/polls_style.css
@@ -11,8 +11,8 @@ body, html, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
 
 /* Body background */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #33435a !important;
+    font-family:  Tahoma,Verdana, Geneva, sans-serif;
+    background-color: #273345 !important;
 }
 
 /* Container */
