--- a/templates/base.html
+++ b/templates/base.html
@@ -47,10 +47,10 @@
         <ul class="nav container">
             
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{%  url 'polls:home' %}">Home</a>
+              <a class="nav-link txt-color" aria-current="page" href="{%  url 'polls:home' %}">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link txt-color dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Account
                 </a>
                 <ul class="dropdown-menu">
@@ -62,7 +62,7 @@
                 </ul>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link txt-color dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Links
                 </a>
                 <ul class="dropdown-menu">
