--- a/polls/templates/polls/poll_detail.html
+++ b/polls/templates/polls/poll_detail.html
@@ -14,13 +14,13 @@
 {% block content %}
 
     <section  class="polls d-flex justify-content-between">
-        <h1 class='poll-question'>{{ poll.poll_question }}</h1> 
+        <h1 class='fs-3'>{{ poll.poll_question }}</h1> 
         <a class="btn btn-sm btn-success"href="{% url 'polls:poll-share-by-email' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}">
             Share&nbsp&nbsp<i class="fa-regular fa-share-from-square"></i>
         </a>   
     </section>
 
-    <section class="polls">
+    <section class="polls fs-4">
         <form action="{% url 'polls:poll-vote-create' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}" method="POST">
             {% csrf_token %}
 
